@@ -5,6 +5,7 @@ Proj 4.9+ required.
 
 * Bug Fixes *
 
+ - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
  - Handle null returns from wkb parser, Paul Ramsey
